--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "AppTest\\": "test/AppTest/"
+            "AppTest\\": "tests/AppTest/"
         }
     },
     "scripts": {
