--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
         colors="true">
     <testsuites>
         <testsuite name="default">
-            <directory suffix="Test.php">test</directory>
+            <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
 
