--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-/.phpcs-cache
-/.phpunit.result.cache
-/clover.xml
-/coveralls-upload.json
+/captainhook.config.json
+/composer.lock
+/phpcs.xml
 /phpunit.xml
 /vendor/
