--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
-         bootstrap="vendor/autoload.php"
+         bootstrap="./vendor/autoload.php"
+         cacheResultFile="./build/cache/phpunit.result.cache"
          executionOrder="depends,defects"
          beStrictAboutCoversAnnotation="true"
          beStrictAboutOutputDuringTests="true"
@@ -9,16 +10,18 @@
          failOnRisky="true"
          failOnWarning="true"
          verbose="true"
-        colors="true">
+         colors="true">
+
     <testsuites>
         <testsuite name="default">
-            <directory suffix="Test.php">tests</directory>
+            <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
 
     <coverage processUncoveredFiles="true">
         <include>
-            <directory suffix=".php">src</directory>
+            <directory suffix=".php">./src</directory>
         </include>
     </coverage>
+
 </phpunit>
