--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
         "php": "^8.0",
         "laminas/laminas-component-installer": "^2.5.0",
         "laminas/laminas-config-aggregator": "^1.5.0",
-        "laminas/laminas-diactoros": "^2.6.0",
+        "laminas/laminas-diactoros": "^2.6",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.3.1",
         "mezzio/mezzio": "^3.5.0",
         "mezzio/mezzio-helpers": "^5.6.0",
         "mezzio/mezzio-laminasrouter": "^3.0.1",
         "mezzio/mezzio-twigrenderer": "^2.6",
-        "ocramius/package-versions": "^2.3"
+        "ocramius/package-versions": "^2.3",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.15",
