--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "mezzio/mezzio-laminasrouter": "^3.0.1",
         "mezzio/mezzio-twigrenderer": "^2.6",
         "ocramius/package-versions": "^2.3",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "ramsey/collection": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.15",
