--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laminas/laminas-diactoros": "^2.6",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.3.1",
+        "league/commonmark": "^2.0",
         "mezzio/mezzio": "^3.5.0",
         "mezzio/mezzio-helpers": "^5.6.0",
         "mezzio/mezzio-laminasrouter": "^3.0.1",
