--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "mezzio/mezzio-twigrenderer": "^2.6",
         "ocramius/package-versions": "^2.3",
         "psr/http-message": "^1.0",
-        "ramsey/collection": "^1.1"
+        "ramsey/collection": "^1.1",
+        "symfony/finder": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.15",
