--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "ocramius/package-versions": "^2.3",
         "psr/http-message": "^1.0",
         "ramsey/collection": "^1.1",
-        "symfony/finder": "^5.3"
+        "symfony/finder": "^5.3",
+        "symfony/yaml": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.15",
