--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/captainhook.config.json
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -18,3 +19,8 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
