--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
+        "@hotwired/turbo": "^7.0.1",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets",
+        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/Resources/assets",
         "@symfony/webpack-encore": "^3.0.0",
         "autoprefixer": "^10.4.8",
         "core-js": "^3.23.0",
