--- a/composer.json
+++ b/composer.json
@@ -76,9 +76,11 @@
         "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-mockery": "^1.1",
         "phpstan/phpstan-phpunit": "^1.1",
+        "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
         "psalm/plugin-mockery": "^0.9.1",
         "psalm/plugin-phpunit": "^0.17.0",
+        "psalm/plugin-symfony": "^3.1",
         "ramsey/coding-standard": "^2.0",
         "ramsey/composer-repl": "^1.4",
         "ramsey/conventional-commits": "^1.3",
