--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@symfony/ux-live-component": "file:vendor/symfony/ux-live-component/assets",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/Resources/assets",
         "@symfony/webpack-encore": "^3.0.0",
+        "@tailwindcss/typography": "^0.5.4",
+        "alpinejs": "^3.10.3",
         "autoprefixer": "^10.4.8",
         "core-js": "^3.23.0",
         "postcss": "^8.4.16",
