--- a/composer.json
+++ b/composer.json
@@ -172,6 +172,11 @@
         "dev:lint:fix": "phpcbf",
         "dev:lint:style": "phpcs --colors",
         "dev:lint:syntax": "parallel-lint --colors src/ tests/",
+        "dev:serve:watch": [
+            "Composer\\Config::disableProcessTimeout",
+            "symfony server:start --daemon --port=9000",
+            "yarn watch"
+        ],
         "dev:test": [
             "@dev:lint",
             "@dev:analyze",
@@ -190,6 +195,7 @@
         "dev:lint:fix": "Auto-fixes coding standards issues, if possible.",
         "dev:lint:style": "Checks for coding standards issues.",
         "dev:lint:syntax": "Checks for syntax errors.",
+        "dev:serve:watch": "Starts the development server and watches for changes to JS/CSS assets (requires Symfony CLI).",
         "dev:test": "Runs linting, static analysis, and unit tests.",
         "dev:test:coverage:ci": "Runs unit tests and generates CI coverage reports.",
         "dev:test:coverage:html": "Runs unit tests and generates HTML coverage report.",
