--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "league/commonmark": "^2.3",
         "nyholm/psr7": "^1.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.7",
@@ -62,6 +63,7 @@
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12 || ^3.0",
         "twig/intl-extra": "^3.4",
+        "twig/markdown-extra": "^3.4",
         "twig/twig": "^2.12 || ^3.0"
     },
     "require-dev": {
