--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,19 +6,43 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/DependencyInjection/'
+      - '../src/Entity/'
+      - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
+
+  League\CommonMark\Extension\Attributes\AttributesExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\Autolink\AutolinkExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\DescriptionList\DescriptionListExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\Footnote\FootnoteExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\HeadingPermalink\HeadingPermalinkExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\SmartPunct\SmartPunctExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\Strikethrough\StrikethroughExtension:
+    tags: ['twig.markdown.league_extension']
+
+  League\CommonMark\Extension\Table\TableExtension:
+    tags: ['twig.markdown.league_extension']
