--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -114,6 +114,12 @@ jobs:
       - name: "Install dependencies (Composer)"
         uses: "ramsey/composer-install@v2"
 
+      - name: "Install dependencies (Yarn)"
+        uses: "bahmutov/npm-install@v1.6.0"
+
+      - name: "Build assets"
+        run: "yarn build"
+
       - name: "Run unit tests (PHPUnit)"
         shell: "bash"
         run: "composer dev:test:coverage:ci"
