--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,11 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
-    versioning-strategy: "increase-if-necessary"
   - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "monthly"
+  - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "monthly"
