--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -22,3 +22,8 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+when@prod:
+  framework:
+    # See https://symfony.com/doc/current/http_cache.html#symfony-reverse-proxy
+    http_cache: true
