--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,6 +2,7 @@
 framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
+    error_controller: App\Controller\ErrorController::catchAll
     http_method_override: false
     handle_all_throwables: true
 
