--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,6 @@
-RewriteCond "%{HTTP_HOST}"   "!^ben\.ramsey\.dev" [NC]
-RewriteCond "%{HTTP_HOST}"   "!^$"
-RewriteRule "^/?(.*)"        "https://ben.ramsey.dev/$1" [L,R,NE]
+RewriteEngine on
+RewriteCond   "%{HTTP_HOST}"   "!^ben\.ramsey\.dev" [NC]
+RewriteCond   "%{HTTP_HOST}"   "!^$"
+RewriteRule   "^/?(.*)"        "https://ben.ramsey.dev/$1" [L,R,NE]
 
 FallbackResource /index.php
