--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,12 @@
-RewriteEngine on
-RewriteCond   "%{HTTP_HOST}"   "!^ben\.ramsey\.dev" [NC]
-RewriteCond   "%{HTTP_HOST}"   "!^$"
-RewriteRule   "^/?(.*)"        "https://ben.ramsey.dev/$1" [L,R=308,NE]
-
 FallbackResource /index.php
+
+RewriteEngine on
+
+# If the host isn't `ben.ramsey.dev`, then redirect to `ben.ramsey.dev`.
+RewriteCond "%{HTTP_HOST}" "!^ben\.ramsey\.dev$" [NC]
+RewriteCond "%{HTTP_HOST}" "!^$"
+
+# Allow requests to /.well-known/openpgpkey/ for any host.
+RewriteCond "%{REQUEST_URI}" "!^/\.well-known/openpgpkey/"
+
+RewriteRule "^/?(.*)" "https://ben.ramsey.dev/$1" [L,NE,R=308]
