configure redirect for domain ramsey.dev

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,8 +5,16 @@ RewriteEngine on
 # If the host isn't `ben.ramsey.dev`, then redirect to `ben.ramsey.dev`.
 RewriteCond "%{HTTP_HOST}" "!^ben\.ramsey\.dev$" [NC]
 RewriteCond "%{HTTP_HOST}" "!^$"
-
+# Don't do this redirect for `ramsey.dev`; we want to temporary redirect for it.
+RewriteCond "%{HTTP_HOST}" "!^ramsey\.dev$" [NC]
 # Allow requests to /.well-known/openpgpkey/ for any host.
 RewriteCond "%{REQUEST_URI}" "!^/\.well-known/openpgpkey/"
-
+# Allow requests to /.well-known/webfinger for any host.
+RewriteCond "%{REQUEST_URI}" "!^/\.well-known/webfinger"
 RewriteRule "^/?(.*)" "https://ben.ramsey.dev/$1" [L,NE,R=308]
+
+# Do a temporary redirect for ramsey.dev.
+RewriteCond "%{HTTP_HOST}" "^ramsey\.dev$" [NC]
+# Don't do the redirect for /.well-known/webfinger.
+RewriteCond "%{REQUEST_URI}" "!^/\.well-known/webfinger"
+RewriteRule "^/?(.*)" "https://ben.ramsey.dev/$1" [L,NE,R=307]
