--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/captainhook.config.json
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -23,3 +24,12 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
