--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,23 @@
 {
+    "name": "ramsey/website",
+    "description": "My personal website and blog.",
+    "license": "(AGPL-3.0-or-later and CC-BY-SA-4.0 and CC0-1.0)",
     "type": "project",
-    "license": "proprietary",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
+    "keywords": [
+        "blog",
+        "personal",
+        "website"
+    ],
+    "authors": [
+        {
+            "name": "Ben Ramsey",
+            "email": "ben@ramsey.dev",
+            "homepage": "https://ben.ramsey.dev"
+        }
+    ],
+    "homepage": "https://ben.ramsey.dev",
     "require": {
-        "php": ">=8.2",
+        "php": "^8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
@@ -13,55 +26,62 @@
         "doctrine/orm": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
-        "symfony/asset": "7.0.*",
-        "symfony/asset-mapper": "7.0.*",
-        "symfony/console": "7.0.*",
-        "symfony/doctrine-messenger": "7.0.*",
-        "symfony/dotenv": "7.0.*",
-        "symfony/expression-language": "7.0.*",
+        "symfony/asset": "~7.0.0",
+        "symfony/asset-mapper": "~7.0.0",
+        "symfony/console": "~7.0.0",
+        "symfony/doctrine-messenger": "~7.0.0",
+        "symfony/dotenv": "~7.0.0",
+        "symfony/expression-language": "~7.0.0",
         "symfony/flex": "^2",
-        "symfony/form": "7.0.*",
-        "symfony/framework-bundle": "7.0.*",
-        "symfony/http-client": "7.0.*",
-        "symfony/intl": "7.0.*",
-        "symfony/mailer": "7.0.*",
-        "symfony/mime": "7.0.*",
+        "symfony/form": "~7.0.0",
+        "symfony/framework-bundle": "~7.0.0",
+        "symfony/http-client": "~7.0.0",
+        "symfony/intl": "~7.0.0",
+        "symfony/mailer": "~7.0.0",
+        "symfony/mime": "~7.0.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/notifier": "7.0.*",
-        "symfony/process": "7.0.*",
-        "symfony/property-access": "7.0.*",
-        "symfony/property-info": "7.0.*",
-        "symfony/runtime": "7.0.*",
-        "symfony/security-bundle": "7.0.*",
-        "symfony/serializer": "7.0.*",
+        "symfony/notifier": "~7.0.0",
+        "symfony/process": "~7.0.0",
+        "symfony/property-access": "~7.0.0",
+        "symfony/property-info": "~7.0.0",
+        "symfony/runtime": "~7.0.0",
+        "symfony/security-bundle": "~7.0.0",
+        "symfony/serializer": "~7.0.0",
         "symfony/stimulus-bundle": "^2.17",
-        "symfony/string": "7.0.*",
-        "symfony/translation": "7.0.*",
-        "symfony/twig-bundle": "7.0.*",
+        "symfony/string": "~7.0.0",
+        "symfony/translation": "~7.0.0",
+        "symfony/twig-bundle": "~7.0.0",
         "symfony/ux-turbo": "^2.17",
-        "symfony/validator": "7.0.*",
-        "symfony/web-link": "7.0.*",
-        "symfony/yaml": "7.0.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "symfony/validator": "~7.0.0",
+        "symfony/web-link": "~7.0.0",
+        "symfony/yaml": "~7.0.0",
+        "twig/extra-bundle": "^3.0",
+        "twig/twig": "^3.0"
     },
-    "config": {
-        "allow-plugins": {
-            "php-http/discovery": true,
-            "symfony/flex": true,
-            "symfony/runtime": true
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
+    "require-dev": {
+        "captainhook/captainhook": "^5.23",
+        "captainhook/plugin-composer": "^5.3",
+        "ergebnis/composer-normalize": "^2.42",
+        "hamcrest/hamcrest-php": "^2.0",
+        "mockery/mockery": "^1.6",
+        "php-parallel-lint/php-console-highlighter": "^1.0",
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.11",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.4",
+        "phpunit/phpunit": "^10.5",
+        "ramsey/coding-standard": "^2.2",
+        "ramsey/composer-repl": "^1.5",
+        "ramsey/conventional-commits": "^1.5",
+        "roave/security-advisories": "dev-latest",
+        "symfony/browser-kit": "~7.0.0",
+        "symfony/css-selector": "~7.0.0",
+        "symfony/debug-bundle": "~7.0.0",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/stopwatch": "~7.0.0",
+        "symfony/web-profiler-bundle": "~7.0.0"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
@@ -73,36 +93,90 @@
         "symfony/polyfill-php81": "*",
         "symfony/polyfill-php82": "*"
     },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
     "conflict": {
         "symfony/symfony": "*"
     },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "captainhook/plugin-composer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "ergebnis/composer-normalize": true,
+            "php-http/discovery": true,
+            "phpstan/extension-installer": true,
+            "ramsey/composer-repl": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "sort-packages": true
+    },
     "extra": {
+        "captainhook": {
+            "force-install": true
+        },
+        "ramsey/conventional-commits": {
+            "configFile": "conventional-commits.json"
+        },
         "symfony": {
             "allow-contrib": false,
             "require": "7.0.*"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "7.0.*",
-        "symfony/css-selector": "7.0.*",
-        "symfony/debug-bundle": "7.0.*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^7.0",
-        "symfony/stopwatch": "7.0.*",
-        "symfony/web-profiler-bundle": "7.0.*"
+    "scripts": {
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ],
+        "analyze": [
+            "@analyze:phpstan"
+        ],
+        "analyze:phpstan": "phpstan analyze --ansi",
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "importmap:install": "symfony-cmd"
+        },
+        "lint": [
+            "@lint:syntax",
+            "@lint:style"
+        ],
+        "lint:fix": "phpcbf --cache=var/phpcs-cache",
+        "lint:style": "phpcs --colors --cache=var/phpcs-cache",
+        "lint:syntax": "parallel-lint --colors src tests",
+        "test": [
+            "@lint",
+            "@analyze",
+            "@test:unit"
+        ],
+        "test:coverage:ci": "phpunit --colors=always --coverage-text --coverage-clover var/coverage/clover.xml",
+        "test:coverage:clear": "git clean -fx var/coverage/.",
+        "test:coverage:html": "phpunit --colors=always --coverage-html var/coverage/coverage-html",
+        "test:unit": "phpunit --colors=always"
+    },
+    "scripts-descriptions": {
+        "analyze": "Run all static analysis checks.",
+        "analyze:phpstan": "Run static analysis with PHPStan.",
+        "lint": "Run all linting checks (but do not attempt to fix).",
+        "lint:fix": "Auto-fix coding standards issues, if possible.",
+        "lint:style": "Check for coding standards issues.",
+        "lint:syntax": "Check for syntax errors.",
+        "test": "Run linting checks, static analysis, and unit tests.",
+        "test:coverage:ci": "Run tests and generate coverage reports for CI.",
+        "test:coverage:clear": "Clears the test coverage report cache.",
+        "test:coverage:html": "Run tests and generate HTML coverage reports.",
+        "test:unit": "Run unit tests."
     }
 }
