chore: change the APP_SECRET value in .env

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=cecf08b7dd32c4a36c8c9d579ed5c555
+APP_SECRET='YouShouldChangeMe-ThisIsNotSafe'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
