--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,7 @@
          displayDetailsOnTestsThatTriggerNotices="true"
          displayDetailsOnTestsThatTriggerWarnings="true"
          colors="true"
+         testdox="true"
 >
     <testsuites>
         <testsuite name="Project Test Suite">
