ci: set APP_ENV variable for the CI environment

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,6 +18,9 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
+env:
+  APP_ENV: test
+
 jobs:
   coding-standards:
     name: "Coding standards"
