--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,11 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "laminas/laminas-diactoros": "^3.3",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
+        "psr/http-factory": "^1.1",
+        "psr/http-message": "^2.0",
         "symfony/asset": "~7.0.0",
         "symfony/asset-mapper": "~7.0.0",
         "symfony/console": "~7.0.0",
