--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.data_dir: '%kernel.project_dir%/data'
+    app.data.changed_website_uri: '%app.data_dir%/changed_website_uri.php'
 
 services:
     # default configuration for services in *this* file
@@ -22,3 +24,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Laminas\Diactoros\UriFactory: ~
+    Psr\Http\Message\UriFactoryInterface: '@Laminas\Diactoros\UriFactory'
