--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,11 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
+[*.{yml,yaml}]
+trim_trailing_whitespace = false
+
 [.github/**.{yml,yaml}]
 indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
