chore: generate migration for symfony/messenger

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -12,6 +12,7 @@
     <file>bin/</file>
     <file>config/</file>
     <file>data/</file>
+    <file>migrations/</file>
     <file>public/</file>
     <file>src/</file>
     <file>tests/</file>
@@ -23,6 +24,10 @@
 
     <rule ref="PSR12.Files.FileHeader.IncorrectOrder">
         <exclude-pattern>data/*.php</exclude-pattern>
+    </rule>
+
+    <rule ref="Generic.Files.LineLength.TooLong">
+        <exclude-pattern>migrations/*.php</exclude-pattern>
     </rule>
 
     <rule ref="SlevomatCodingStandard.Whitespaces.DuplicateSpaces">
