--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,6 +8,10 @@ doctrine:
 
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+
+        types:
+            url: 'App\Doctrine\Type\UrlType'
+
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
