ci: add pull_request event back to Actions configuration

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -8,6 +8,9 @@ on:
       - "main"
     tags:
       - "*"
+  pull_request:
+    branches:
+      - "main"
   pull_request_target:
     branches:
       - "main"
