--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "psr/http-factory": "^1.1",
         "psr/http-message": "^2.0",
         "ramsey/uuid-doctrine": "^2.1",
+        "scienta/doctrine-json-functions": "^6.1",
         "symfony/asset": "~7.1.0",
         "symfony/asset-mapper": "~7.1.0",
         "symfony/console": "~7.1.0",
@@ -72,6 +73,7 @@
         "dama/doctrine-test-bundle": "^8.2",
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "ergebnis/composer-normalize": "^2.42",
+        "fakerphp/faker": "^1.23",
         "mockery/mockery": "^1.6",
         "php-parallel-lint/php-console-highlighter": "^1.0",
         "php-parallel-lint/php-parallel-lint": "^1.4",
