--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -28,6 +28,9 @@ doctrine:
                 alias: App
         controller_resolver:
             auto_mapping: false
+        dql:
+            string_functions:
+                JSONB_CONTAINS: 'Scienta\DoctrineJsonFunctions\Query\AST\Functions\Postgresql\JsonbContains'
 
 when@test:
     doctrine:
