feat: add EasyAdmin dashboard and support for editing short URLs

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "easycorp/easyadmin-bundle": "^4.10",
         "laminas/laminas-diactoros": "^3.3",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
