--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -15,3 +15,7 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+when@dev:
+    framework:
+        ide: phpstorm
